configure disable pivot button + ISSUE:button layout has broken on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,10 @@
   --tableMarginBottom: 10px;
 
   --showBtnBg: #456de6;
-  --showBtnHoverBg: #456de699;
+  --showBtnHoverBg: #456de6;
   --showBtnTextCol: #f1f1f1;
   --hideBtnBg: #e74645;
-  --hideBtnHoverBg: #e7464599;
+  --hideBtnHoverBg: #e74645;
   --hideBtnTextCol: #f1f1f1;
 
   --scoreBg: #30a130;
@@ -172,11 +172,12 @@ table.matches td{
   .collapse{
     display: flex;
   }
-  #matchesBtn{
+  /* #matchesBtn{
     display: none;
-  }
+  } */
   button{
-    width: 100%!important;
+    /* width: 100%!important; */
+    width: 50%!important;
     margin-left: 1%;
     margin-right: 1%;
   }
@@ -192,10 +193,13 @@ table.matches td{
   .container{
     display: block;
   }
+  .collapse{
+    display: flex;
+  }
   button{
-    width: 98%!important;
-    margin-left: 1%!important;
-    margin-right: 1%!important;
+    width: 50%!important;
+    margin-left: 10px!important;
+    margin-right: 10px!important;
   }
   .hideOnTablet{
     display: none;
@@ -271,6 +275,9 @@ table.matches td{
   table.tabletStatsUi > thead > tr > td{
     font-size: 30px;
  }
+  button{
+    font-size: .9em!important;
+  }
 }
 @media (max-width: 310px){
   :root{
@@ -284,13 +291,16 @@ table.matches td{
   .hideOnTiny{
     display: none;
   }
+  button{
+    font-size: .8em!important;
+  }
 }
 @media (max-width: 288px){
   h1, h2{
     font-size: 1rem;   
   }
   button{
-    font-size: .8em!important;
+    font-size: .7em!important;
   }
   table.matches .score{
     font-size: 12px;
@@ -302,15 +312,18 @@ table.matches td{
     --countryRowMatchesTextSize: 12px;
   }
   .collapse{
-    display: block;
-    width: 98%;
-    margin: 0 auto;
+    display: flex;
+    width: 100%;
   } 
   .collapse button{
-    width: 100%;
-    margin: 3px 0;
+    width: 50%!important;
+    margin: 0!important;
+  }
+  button{
+    font-size: .6em!important;
   }
 }
+
 @media (max-width: 2337px){
   #superScreenBtn{
     display: none;
